attack speed implementation